# julia-quantengine-research

./: .gitignore  Peter_Norvig_Julia_Presentation.pptx  Peter_Norvig_Julia_Presentation_FINAL.pptx  QuantEngine_v10_Production_Safe_Architecture_Plan.md  QuantEngine_v11_System_Specification.md  Quant_Engine_architecture_plan.md
TradingSwarm/: .env.example  .gitignore  pyproject.toml
TradingSwarm/deploy/: docker-compose.prod.yml  docker-compose.yml
TradingSwarm/deploy/systemd/: quantengine-julia.service  quantengine.service
TradingSwarm/src/control/: capital_allocator.py  factor_exposure.py  kill_switch.py  projection_alignment.py  risk_overlord.py
TradingSwarm/src/core/: config.py  event_schema.py  idempotency.py  instrument_master.py  instrument_seeds.py  julia_bridge.py  trading_calendar.py
TradingSwarm/src/dashboard/: server.py
TradingSwarm/src/execution/: alpaca_adapter.py  base_adapter.py  binance_adapter.py  oanda_adapter.py  paper_adapter.py  polymarket_adapter.py  reconciler.py
TradingSwarm/src/learning/: replay_harness.py
TradingSwarm/src/ledger/: outbox.py  postgres.py  redis_streams.py
TradingSwarm/src/monitoring/: alerting.py  execution_metrics.py  health.py  ntp_check.py  supervisor.py
TradingSwarm/src/pipeline/: data_ingest.py  fill_processor.py  oms.py  risk_gate.py  runner.py  shadow_mode.py  signal_engine.py  signal_router.py  smart_router.py  validation_pack.py
TradingSwarm/src/research/: external_positioning.py  feature_store.py  llm_interpreter.py
TradingSwarm/src/security/: secrets.py
TradingSwarm/tests/: conftest.py
(+242 files in other folders)
