[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tradingswarm"
version = "0.1.0"
description = "QuantEngine production orchestration layer"
requires-python = ">=3.12"
dependencies = [
    # Database
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    # Redis
    "redis>=5.2.0",
    # ZeroMQ (Julia bridge)
    "pyzmq>=26.0.0",
    # Async
    "anyio>=4.5.0",
    # HTTP / WebSocket
    "httpx>=0.28.0",
    "websockets>=14.0",
    # Data
    "orjson>=3.10.0",
    "pydantic>=2.10.0",
    # Monitoring
    "prometheus-client>=0.21.0",
    # Crypto
    "cryptography>=44.0.0",
    # Config
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
